Set up Heroku Port

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<p>Welcome to NodeJS World in Express</p>
-	<footer>Copyright {{currentDate}}</footer>
+	<footer>About Copyright {{currentDate}}</footer>
 </body>
 </html>
