--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,8 @@
 	<title>{{pageTitle}}</title>
 </head>
 <body>
+	<p><a href="/home.hbs">Home</p>
+	<p><a href="/about.hbs">About</p>
 	<p>Welcome to NodeJS World in Express</p>
 	<footer>Copyright {{currentDate}}</footer>
 </body>
